--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "task-service",
+  "name": "Heros",
   "version": "1.0.0",
-  "description": "REST endpoint for Tasks",
-  "main": "server.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
   }
 }
